update code to include spark

--- a/cleaning_train_finished.ipynb
+++ b/cleaning_train_finished.ipynb
@@ -569,6 +569,132 @@
    "source": [
     "df.to_csv(\"Resources/train_cleaned.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/05/21 19:43:11 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/05/21 19:43:25 WARN GarbageCollectionMetrics: To enable non-built-in garbage collector(s) List(G1 Concurrent GC), users should configure it(them) to spark.eventLog.gcMetrics.youngGenerationGarbageCollectors or spark.eventLog.gcMetrics.oldGenerationGarbageCollectors\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "# Create a Spark session\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"CSV to DataFrame\") \\\n",
+    "    .getOrCreate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+-------------+---------------------+---------------+-----------+--------------------+-------------------+----------------------+--------------------+--------------------+----------+----------------+------------------------+--------------------+---------------------+-------------------+--------------------+------------------+------------+\n",
+      "| SSN|Annual_Income|Monthly_Inhand_Salary|Num_Credit_Card|Num_of_Loan|        Type_of_Loan|Delay_from_due_date|Num_of_Delayed_Payment|Changed_Credit_Limit|Num_Credit_Inquiries|Credit_Mix|Outstanding_Debt|Credit_Utilization_Ratio|  Credit_History_Age|Payment_of_Min_Amount|Total_EMI_per_month|   Payment_Behaviour|   Monthly_Balance|Credit_Score|\n",
+      "+----+-------------+---------------------+---------------+-----------+--------------------+-------------------+----------------------+--------------------+--------------------+----------+----------------+------------------------+--------------------+---------------------+-------------------+--------------------+------------------+------------+\n",
+      "|NULL|     19114.12|   1824.8433333333328|              4|          4|Auto Loan, Credit...|                  3|                   7.0|               11.27|                 4.0|          |          809.98|      26.822619623699016|22 Years and 1 Mo...|                   No|  49.57494921489417|High spent Small ...|312.49408867943663|        Good|\n",
+      "|NULL|     19114.12|                 NULL|              4|          4|Auto Loan, Credit...|                  3|                   7.0|                NULL|                 4.0|      Good|          809.98|       28.60935202206993|22 Years and 3 Mo...|                   No|  49.57494921489417|Low spent Medium ...| 331.2098628537912|        Good|\n",
+      "|NULL|     19114.12|                 NULL|              4|          4|Auto Loan, Credit...|                  5|                   4.0|                6.27|                 4.0|      Good|          809.98|      31.377861869582357|22 Years and 4 Mo...|                   No|  49.57494921489417|Low spent Small v...|223.45130972736783|        Good|\n",
+      "|NULL|     19114.12|   1824.8433333333328|              4|          4|Auto Loan, Credit...|                  6|                  NULL|               11.27|                 4.0|      Good|          809.98|      24.797346908844982|22 Years and 5 Mo...|                   No|  49.57494921489417|High spent Medium...|341.48923103222177|        Good|\n",
+      "|NULL|     19114.12|                 NULL|              4|          4|Auto Loan, Credit...|                  8|                   4.0|                9.27|                 4.0|      Good|          809.98|       27.26225871052017|22 Years and 6 Mo...|                   No|  49.57494921489417|              !@9#%8| 340.4792117872438|        Good|\n",
+      "|NULL|     19114.12|   1824.8433333333328|              4|          4|Auto Loan, Credit...|                  3|                   8.0|               11.27|                 4.0|      Good|          809.98|       22.53759303178384|22 Years and 7 Mo...|                   No|  49.57494921489417|Low spent Small v...| 244.5653167062043|        Good|\n",
+      "|NULL|     19114.12|   1824.8433333333328|              4|          4|Auto Loan, Credit...|                  3|                   6.0|               11.27|                 4.0|      Good|          809.98|       23.93379480196552|                NULL|                   No|  49.57494921489417|High spent Medium...|358.12416760938714|    Standard|\n",
+      "|NULL|     34847.84|    3037.986666666666|              4|          1| Credit-Builder Loan|                  3|                   4.0|                5.42|                 2.0|      Good|          605.03|       24.46403063758457|26 Years and 7 Mo...|                   No| 18.816214573128885|Low spent Small v...|470.69062692529184|    Standard|\n",
+      "|NULL|     34847.84|    3037.986666666666|              4|          1| Credit-Builder Loan|                  7|                   1.0|                7.42|                 2.0|      Good|          605.03|      38.550848433956325|26 Years and 8 Mo...|                   No| 18.816214573128885|High spent Large ...| 484.5912142650067|        Good|\n",
+      "|NULL|     34847.84|                 NULL|              4|          1| Credit-Builder Loan|                  3|                   3.0|                5.42|                 2.0|      Good|          605.03|       39.18265565546884|26 Years and 10 M...|                   No| 18.816214573128885|Low spent Medium ...| 465.6762241330048|        Good|\n",
+      "|NULL|     34847.84|    3037.986666666666|              4|          1| Credit-Builder Loan|                  3|                   1.0|                6.42|                 2.0|      Good|          605.03|       34.97789474709241|26 Years and 11 M...|                   No| 18.816214573128885|Low spent Small v...| 444.8670318506144|        Good|\n",
+      "|NULL|     34847.84|    3037.986666666666|              4|          1| Credit-Builder Loan|                  3|                   0.0|                5.42|                 2.0|      Good|          605.03|       33.38101020065065|27 Years and 0 Mo...|                   No| 18.816214573128885|High spent Large ...|  481.505261949182|        Good|\n",
+      "|NULL|     34847.84|                 NULL|              4|          1| Credit-Builder Loan|                  3|                   4.0|                5.42|                 2.0|      Good|          605.03|      31.131701611553307|27 Years and 1 Mo...|                   NM| 18.816214573128885|High spent Medium...| 464.8806778859809|        Good|\n",
+      "|NULL|     34847.84|    3037.986666666666|              4|          1| Credit-Builder Loan|                  3|                   4.0|                5.42|                 2.0|      Good|          605.03|      32.933856293622235|27 Years and 2 Mo...|                   No| 18.816214573128885|Low spent Small v...|356.07810855965045|        Good|\n",
+      "|NULL|    143162.64|             12187.22|              5|          3|Auto Loan, Auto L...|                  5|                   8.0|                 7.1|                 3.0|      Good|         1303.01|      28.616734823006844|17 Years and 9 Mo...|                   No|  246.9923194537421|              !@9#%8|1043.3159778669492|        Good|\n",
+      "|NULL|    143162.64|             12187.22|              5|          3|Auto Loan, Auto L...|                 13|                   6.0|                 7.1|                 3.0|      Good|         1303.01|       41.70257342393906|17 Years and 10 M...|                   No|  246.9923194537421|High spent Small ...| 998.8692967863226|        Good|\n",
+      "|NULL|    143162.64|                 NULL|              5|          3|Auto Loan, Auto L...|                  8|                   7.0|                11.1|                NULL|      Good|         1303.01|      26.519815391546494|17 Years and 11 M...|                   No|  246.9923194537421|High spent Small ...|  715.741367403555|        Good|\n",
+      "|NULL|    143162.64|             12187.22|              5|          3|Auto Loan, Auto L...|                  8|                   5.0|                 9.1|                 3.0|          |         1303.01|       39.50164810812735|                NULL|                   No|  246.9923194537421|Low spent Medium ...| 426.5134106068658|        Good|\n",
+      "|NULL|    143162.64|             12187.22|              5|          3|Auto Loan, Auto L...|                 10|                   5.0|                 7.1|                 3.0|      Good|         1303.01|       31.37614957421204|18 Years and 1 Mo...|                   No|  246.9923194537421|Low spent Large v...| 810.7821526659284|        Good|\n",
+      "|NULL|    143162.64|             12187.22|              5|        967|Auto Loan, Auto L...|                  8|                   6.0|                 7.1|                 3.0|      Good|         1303.01|       39.78399345802119|18 Years and 2 Mo...|                   No|  246.9923194537421|High spent Medium...| 963.9215811205684|        Good|\n",
+      "+----+-------------+---------------------+---------------+-----------+--------------------+-------------------+----------------------+--------------------+--------------------+----------+----------------+------------------------+--------------------+---------------------+-------------------+--------------------+------------------+------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read the CSV file into a DataFrame\n",
+    "df = spark.read.csv(\"Resources/train_cleaned.csv\", header=True, inferSchema=True)\n",
+    "df.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+---------------------+---------------+-----------+--------------------+-------------------+----------------------+--------------------+--------------------+----------+----------------+------------------------+--------------------+---------------------+-------------------+--------------------+------------------+------------+\n",
+      "|Annual_Income|Monthly_Inhand_Salary|Num_Credit_Card|Num_of_Loan|        Type_of_Loan|Delay_from_due_date|Num_of_Delayed_Payment|Changed_Credit_Limit|Num_Credit_Inquiries|Credit_Mix|Outstanding_Debt|Credit_Utilization_Ratio|  Credit_History_Age|Payment_of_Min_Amount|Total_EMI_per_month|   Payment_Behaviour|   Monthly_Balance|Credit_Score|\n",
+      "+-------------+---------------------+---------------+-----------+--------------------+-------------------+----------------------+--------------------+--------------------+----------+----------------+------------------------+--------------------+---------------------+-------------------+--------------------+------------------+------------+\n",
+      "|     19114.12|   1824.8433333333328|              4|          4|Auto Loan, Credit...|                  3|                   7.0|               11.27|                 4.0|          |          809.98|      26.822619623699016|22 Years and 1 Mo...|                   No|  49.57494921489417|High spent Small ...|312.49408867943663|        Good|\n",
+      "|     19114.12|                 NULL|              4|          4|Auto Loan, Credit...|                  3|                   7.0|                NULL|                 4.0|      Good|          809.98|       28.60935202206993|22 Years and 3 Mo...|                   No|  49.57494921489417|Low spent Medium ...| 331.2098628537912|        Good|\n",
+      "|     19114.12|                 NULL|              4|          4|Auto Loan, Credit...|                  5|                   4.0|                6.27|                 4.0|      Good|          809.98|      31.377861869582357|22 Years and 4 Mo...|                   No|  49.57494921489417|Low spent Small v...|223.45130972736783|        Good|\n",
+      "|     19114.12|   1824.8433333333328|              4|          4|Auto Loan, Credit...|                  6|                  NULL|               11.27|                 4.0|      Good|          809.98|      24.797346908844982|22 Years and 5 Mo...|                   No|  49.57494921489417|High spent Medium...|341.48923103222177|        Good|\n",
+      "|     19114.12|                 NULL|              4|          4|Auto Loan, Credit...|                  8|                   4.0|                9.27|                 4.0|      Good|          809.98|       27.26225871052017|22 Years and 6 Mo...|                   No|  49.57494921489417|              !@9#%8| 340.4792117872438|        Good|\n",
+      "|     19114.12|   1824.8433333333328|              4|          4|Auto Loan, Credit...|                  3|                   8.0|               11.27|                 4.0|      Good|          809.98|       22.53759303178384|22 Years and 7 Mo...|                   No|  49.57494921489417|Low spent Small v...| 244.5653167062043|        Good|\n",
+      "|     19114.12|   1824.8433333333328|              4|          4|Auto Loan, Credit...|                  3|                   6.0|               11.27|                 4.0|      Good|          809.98|       23.93379480196552|                NULL|                   No|  49.57494921489417|High spent Medium...|358.12416760938714|    Standard|\n",
+      "|     34847.84|    3037.986666666666|              4|          1| Credit-Builder Loan|                  3|                   4.0|                5.42|                 2.0|      Good|          605.03|       24.46403063758457|26 Years and 7 Mo...|                   No| 18.816214573128885|Low spent Small v...|470.69062692529184|    Standard|\n",
+      "|     34847.84|    3037.986666666666|              4|          1| Credit-Builder Loan|                  7|                   1.0|                7.42|                 2.0|      Good|          605.03|      38.550848433956325|26 Years and 8 Mo...|                   No| 18.816214573128885|High spent Large ...| 484.5912142650067|        Good|\n",
+      "|     34847.84|                 NULL|              4|          1| Credit-Builder Loan|                  3|                   3.0|                5.42|                 2.0|      Good|          605.03|       39.18265565546884|26 Years and 10 M...|                   No| 18.816214573128885|Low spent Medium ...| 465.6762241330048|        Good|\n",
+      "|     34847.84|    3037.986666666666|              4|          1| Credit-Builder Loan|                  3|                   1.0|                6.42|                 2.0|      Good|          605.03|       34.97789474709241|26 Years and 11 M...|                   No| 18.816214573128885|Low spent Small v...| 444.8670318506144|        Good|\n",
+      "|     34847.84|    3037.986666666666|              4|          1| Credit-Builder Loan|                  3|                   0.0|                5.42|                 2.0|      Good|          605.03|       33.38101020065065|27 Years and 0 Mo...|                   No| 18.816214573128885|High spent Large ...|  481.505261949182|        Good|\n",
+      "|     34847.84|                 NULL|              4|          1| Credit-Builder Loan|                  3|                   4.0|                5.42|                 2.0|      Good|          605.03|      31.131701611553307|27 Years and 1 Mo...|                   NM| 18.816214573128885|High spent Medium...| 464.8806778859809|        Good|\n",
+      "|     34847.84|    3037.986666666666|              4|          1| Credit-Builder Loan|                  3|                   4.0|                5.42|                 2.0|      Good|          605.03|      32.933856293622235|27 Years and 2 Mo...|                   No| 18.816214573128885|Low spent Small v...|356.07810855965045|        Good|\n",
+      "|    143162.64|             12187.22|              5|          3|Auto Loan, Auto L...|                  5|                   8.0|                 7.1|                 3.0|      Good|         1303.01|      28.616734823006844|17 Years and 9 Mo...|                   No|  246.9923194537421|              !@9#%8|1043.3159778669492|        Good|\n",
+      "|    143162.64|             12187.22|              5|          3|Auto Loan, Auto L...|                 13|                   6.0|                 7.1|                 3.0|      Good|         1303.01|       41.70257342393906|17 Years and 10 M...|                   No|  246.9923194537421|High spent Small ...| 998.8692967863226|        Good|\n",
+      "|    143162.64|                 NULL|              5|          3|Auto Loan, Auto L...|                  8|                   7.0|                11.1|                NULL|      Good|         1303.01|      26.519815391546494|17 Years and 11 M...|                   No|  246.9923194537421|High spent Small ...|  715.741367403555|        Good|\n",
+      "|    143162.64|             12187.22|              5|          3|Auto Loan, Auto L...|                  8|                   5.0|                 9.1|                 3.0|          |         1303.01|       39.50164810812735|                NULL|                   No|  246.9923194537421|Low spent Medium ...| 426.5134106068658|        Good|\n",
+      "|    143162.64|             12187.22|              5|          3|Auto Loan, Auto L...|                 10|                   5.0|                 7.1|                 3.0|      Good|         1303.01|       31.37614957421204|18 Years and 1 Mo...|                   No|  246.9923194537421|Low spent Large v...| 810.7821526659284|        Good|\n",
+      "|    143162.64|             12187.22|              5|        967|Auto Loan, Auto L...|                  8|                   6.0|                 7.1|                 3.0|      Good|         1303.01|       39.78399345802119|18 Years and 2 Mo...|                   No|  246.9923194537421|High spent Medium...| 963.9215811205684|        Good|\n",
+      "+-------------+---------------------+---------------+-----------+--------------------+-------------------+----------------------+--------------------+--------------------+----------+----------------+------------------------+--------------------+---------------------+-------------------+--------------------+------------------+------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Drop column not needed\n",
+    "train_cleaned_df = df.drop(\"SSN\")\n",
+    "train_cleaned_df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -587,7 +713,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
