added occupation into analysis

--- a/cleaning_train_finished.ipynb
+++ b/cleaning_train_finished.ipynb
@@ -145,6 +145,7 @@
        "      <th></th>\n",
        "      <th>Age</th>\n",
        "      <th>SSN</th>\n",
+       "      <th>Occupation</th>\n",
        "      <th>Annual_Income</th>\n",
        "      <th>Monthly_Inhand_Salary</th>\n",
        "      <th>Num_Bank_Accounts</th>\n",
@@ -152,7 +153,6 @@
        "      <th>Interest_Rate</th>\n",
        "      <th>Num_of_Loan</th>\n",
        "      <th>Type_of_Loan</th>\n",
-       "      <th>Delay_from_due_date</th>\n",
        "      <th>...</th>\n",
        "      <th>Credit_Mix</th>\n",
        "      <th>Outstanding_Debt</th>\n",
@@ -171,6 +171,7 @@
        "      <th>0</th>\n",
        "      <td>23</td>\n",
        "      <td>821-00-0265</td>\n",
+       "      <td>Scientist</td>\n",
        "      <td>19114.12</td>\n",
        "      <td>1824.843333</td>\n",
        "      <td>3</td>\n",
@@ -178,7 +179,6 @@
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>Auto Loan, Credit-Builder Loan, Personal Loan,...</td>\n",
-       "      <td>3</td>\n",
        "      <td>...</td>\n",
        "      <td></td>\n",
        "      <td>809.98</td>\n",
@@ -195,6 +195,7 @@
        "      <th>1</th>\n",
        "      <td>23</td>\n",
        "      <td>821-00-0265</td>\n",
+       "      <td>Scientist</td>\n",
        "      <td>19114.12</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3</td>\n",
@@ -202,7 +203,6 @@
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>Auto Loan, Credit-Builder Loan, Personal Loan,...</td>\n",
-       "      <td>-1</td>\n",
        "      <td>...</td>\n",
        "      <td>Good</td>\n",
        "      <td>809.98</td>\n",
@@ -219,6 +219,7 @@
        "      <th>2</th>\n",
        "      <td>-500</td>\n",
        "      <td>821-00-0265</td>\n",
+       "      <td>Scientist</td>\n",
        "      <td>19114.12</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3</td>\n",
@@ -226,7 +227,6 @@
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>Auto Loan, Credit-Builder Loan, Personal Loan,...</td>\n",
-       "      <td>3</td>\n",
        "      <td>...</td>\n",
        "      <td>Good</td>\n",
        "      <td>809.98</td>\n",
@@ -243,6 +243,7 @@
        "      <th>3</th>\n",
        "      <td>23</td>\n",
        "      <td>821-00-0265</td>\n",
+       "      <td>Scientist</td>\n",
        "      <td>19114.12</td>\n",
        "      <td>NaN</td>\n",
        "      <td>3</td>\n",
@@ -250,7 +251,6 @@
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>Auto Loan, Credit-Builder Loan, Personal Loan,...</td>\n",
-       "      <td>5</td>\n",
        "      <td>...</td>\n",
        "      <td>Good</td>\n",
        "      <td>809.98</td>\n",
@@ -267,6 +267,7 @@
        "      <th>4</th>\n",
        "      <td>23</td>\n",
        "      <td>821-00-0265</td>\n",
+       "      <td>Scientist</td>\n",
        "      <td>19114.12</td>\n",
        "      <td>1824.843333</td>\n",
        "      <td>3</td>\n",
@@ -274,7 +275,6 @@
        "      <td>3</td>\n",
        "      <td>4</td>\n",
        "      <td>Auto Loan, Credit-Builder Loan, Personal Loan,...</td>\n",
-       "      <td>6</td>\n",
        "      <td>...</td>\n",
        "      <td>Good</td>\n",
        "      <td>809.98</td>\n",
@@ -315,6 +315,7 @@
        "      <th>99995</th>\n",
        "      <td>25</td>\n",
        "      <td>078-73-5990</td>\n",
+       "      <td>Mechanic</td>\n",
        "      <td>39628.99</td>\n",
        "      <td>3359.415833</td>\n",
        "      <td>4</td>\n",
@@ -322,7 +323,6 @@
        "      <td>7</td>\n",
        "      <td>2</td>\n",
        "      <td>Auto Loan, and Student Loan</td>\n",
-       "      <td>23</td>\n",
        "      <td>...</td>\n",
        "      <td></td>\n",
        "      <td>502.38</td>\n",
@@ -339,6 +339,7 @@
        "      <th>99996</th>\n",
        "      <td>25</td>\n",
        "      <td>078-73-5990</td>\n",
+       "      <td>Mechanic</td>\n",
        "      <td>39628.99</td>\n",
        "      <td>3359.415833</td>\n",
        "      <td>4</td>\n",
@@ -346,7 +347,6 @@
        "      <td>7</td>\n",
        "      <td>2</td>\n",
        "      <td>Auto Loan, and Student Loan</td>\n",
-       "      <td>18</td>\n",
        "      <td>...</td>\n",
        "      <td></td>\n",
        "      <td>502.38</td>\n",
@@ -363,6 +363,7 @@
        "      <th>99997</th>\n",
        "      <td>25</td>\n",
        "      <td>078-73-5990</td>\n",
+       "      <td>Mechanic</td>\n",
        "      <td>39628.99</td>\n",
        "      <td>3359.415833</td>\n",
        "      <td>4</td>\n",
@@ -370,7 +371,6 @@
        "      <td>5729</td>\n",
        "      <td>2</td>\n",
        "      <td>Auto Loan, and Student Loan</td>\n",
-       "      <td>27</td>\n",
        "      <td>...</td>\n",
        "      <td>Good</td>\n",
        "      <td>502.38</td>\n",
@@ -387,6 +387,7 @@
        "      <th>99998</th>\n",
        "      <td>25</td>\n",
        "      <td>078-73-5990</td>\n",
+       "      <td>Mechanic</td>\n",
        "      <td>39628.99</td>\n",
        "      <td>3359.415833</td>\n",
        "      <td>4</td>\n",
@@ -394,7 +395,6 @@
        "      <td>7</td>\n",
        "      <td>2</td>\n",
        "      <td>Auto Loan, and Student Loan</td>\n",
-       "      <td>20</td>\n",
        "      <td>...</td>\n",
        "      <td>Good</td>\n",
        "      <td>502.38</td>\n",
@@ -411,6 +411,7 @@
        "      <th>99999</th>\n",
        "      <td>25</td>\n",
        "      <td>078-73-5990</td>\n",
+       "      <td>Mechanic</td>\n",
        "      <td>39628.99</td>\n",
        "      <td>3359.415833</td>\n",
        "      <td>4</td>\n",
@@ -418,7 +419,6 @@
        "      <td>7</td>\n",
        "      <td>2</td>\n",
        "      <td>Auto Loan, and Student Loan</td>\n",
-       "      <td>18</td>\n",
        "      <td>...</td>\n",
        "      <td>Good</td>\n",
        "      <td>502.38</td>\n",
@@ -433,22 +433,22 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100000 rows × 23 columns</p>\n",
+       "<p>100000 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        Age          SSN Annual_Income  Monthly_Inhand_Salary  \\\n",
-       "0        23  821-00-0265      19114.12            1824.843333   \n",
-       "1        23  821-00-0265      19114.12                    NaN   \n",
-       "2      -500  821-00-0265      19114.12                    NaN   \n",
-       "3        23  821-00-0265      19114.12                    NaN   \n",
-       "4        23  821-00-0265      19114.12            1824.843333   \n",
-       "...     ...          ...           ...                    ...   \n",
-       "99995    25  078-73-5990      39628.99            3359.415833   \n",
-       "99996    25  078-73-5990      39628.99            3359.415833   \n",
-       "99997    25  078-73-5990      39628.99            3359.415833   \n",
-       "99998    25  078-73-5990      39628.99            3359.415833   \n",
-       "99999    25  078-73-5990     39628.99             3359.415833   \n",
+       "        Age          SSN Occupation Annual_Income  Monthly_Inhand_Salary  \\\n",
+       "0        23  821-00-0265  Scientist      19114.12            1824.843333   \n",
+       "1        23  821-00-0265  Scientist      19114.12                    NaN   \n",
+       "2      -500  821-00-0265  Scientist      19114.12                    NaN   \n",
+       "3        23  821-00-0265  Scientist      19114.12                    NaN   \n",
+       "4        23  821-00-0265  Scientist      19114.12            1824.843333   \n",
+       "...     ...          ...        ...           ...                    ...   \n",
+       "99995    25  078-73-5990   Mechanic      39628.99            3359.415833   \n",
+       "99996    25  078-73-5990   Mechanic      39628.99            3359.415833   \n",
+       "99997    25  078-73-5990   Mechanic      39628.99            3359.415833   \n",
+       "99998    25  078-73-5990   Mechanic      39628.99            3359.415833   \n",
+       "99999    25  078-73-5990   Mechanic     39628.99             3359.415833   \n",
        "\n",
        "       Num_Bank_Accounts  Num_Credit_Card  Interest_Rate Num_of_Loan  \\\n",
        "0                      3                4              3           4   \n",
@@ -463,72 +463,59 @@
        "99998                  4                6              7           2   \n",
        "99999                  4                6              7           2   \n",
        "\n",
-       "                                            Type_of_Loan  Delay_from_due_date  \\\n",
-       "0      Auto Loan, Credit-Builder Loan, Personal Loan,...                    3   \n",
-       "1      Auto Loan, Credit-Builder Loan, Personal Loan,...                   -1   \n",
-       "2      Auto Loan, Credit-Builder Loan, Personal Loan,...                    3   \n",
-       "3      Auto Loan, Credit-Builder Loan, Personal Loan,...                    5   \n",
-       "4      Auto Loan, Credit-Builder Loan, Personal Loan,...                    6   \n",
-       "...                                                  ...                  ...   \n",
-       "99995                        Auto Loan, and Student Loan                   23   \n",
-       "99996                        Auto Loan, and Student Loan                   18   \n",
-       "99997                        Auto Loan, and Student Loan                   27   \n",
-       "99998                        Auto Loan, and Student Loan                   20   \n",
-       "99999                        Auto Loan, and Student Loan                   18   \n",
+       "                                            Type_of_Loan  ...  Credit_Mix  \\\n",
+       "0      Auto Loan, Credit-Builder Loan, Personal Loan,...  ...               \n",
+       "1      Auto Loan, Credit-Builder Loan, Personal Loan,...  ...        Good   \n",
+       "2      Auto Loan, Credit-Builder Loan, Personal Loan,...  ...        Good   \n",
+       "3      Auto Loan, Credit-Builder Loan, Personal Loan,...  ...        Good   \n",
+       "4      Auto Loan, Credit-Builder Loan, Personal Loan,...  ...        Good   \n",
+       "...                                                  ...  ...         ...   \n",
+       "99995                        Auto Loan, and Student Loan  ...               \n",
+       "99996                        Auto Loan, and Student Loan  ...               \n",
+       "99997                        Auto Loan, and Student Loan  ...        Good   \n",
+       "99998                        Auto Loan, and Student Loan  ...        Good   \n",
+       "99999                        Auto Loan, and Student Loan  ...        Good   \n",
        "\n",
-       "       ... Credit_Mix Outstanding_Debt  Credit_Utilization_Ratio  \\\n",
-       "0      ...                      809.98                 26.822620   \n",
-       "1      ...       Good           809.98                 31.944960   \n",
-       "2      ...       Good           809.98                 28.609352   \n",
-       "3      ...       Good           809.98                 31.377862   \n",
-       "4      ...       Good           809.98                 24.797347   \n",
-       "...    ...        ...              ...                       ...   \n",
-       "99995  ...                      502.38                 34.663572   \n",
-       "99996  ...                      502.38                 40.565631   \n",
-       "99997  ...       Good           502.38                 41.255522   \n",
-       "99998  ...       Good           502.38                 33.638208   \n",
-       "99999  ...       Good           502.38                 34.192463   \n",
+       "      Outstanding_Debt Credit_Utilization_Ratio      Credit_History_Age  \\\n",
+       "0               809.98                26.822620   22 Years and 1 Months   \n",
+       "1               809.98                31.944960                     NaN   \n",
+       "2               809.98                28.609352   22 Years and 3 Months   \n",
+       "3               809.98                31.377862   22 Years and 4 Months   \n",
+       "4               809.98                24.797347   22 Years and 5 Months   \n",
+       "...                ...                      ...                     ...   \n",
+       "99995           502.38                34.663572   31 Years and 6 Months   \n",
+       "99996           502.38                40.565631   31 Years and 7 Months   \n",
+       "99997           502.38                41.255522   31 Years and 8 Months   \n",
+       "99998           502.38                33.638208   31 Years and 9 Months   \n",
+       "99999           502.38                34.192463  31 Years and 10 Months   \n",
        "\n",
-       "           Credit_History_Age Payment_of_Min_Amount  Total_EMI_per_month  \\\n",
-       "0       22 Years and 1 Months                    No            49.574949   \n",
-       "1                         NaN                    No            49.574949   \n",
-       "2       22 Years and 3 Months                    No            49.574949   \n",
-       "3       22 Years and 4 Months                    No            49.574949   \n",
-       "4       22 Years and 5 Months                    No            49.574949   \n",
-       "...                       ...                   ...                  ...   \n",
-       "99995   31 Years and 6 Months                    No            35.104023   \n",
-       "99996   31 Years and 7 Months                    No            35.104023   \n",
-       "99997   31 Years and 8 Months                    No            35.104023   \n",
-       "99998   31 Years and 9 Months                    No            35.104023   \n",
-       "99999  31 Years and 10 Months                    No            35.104023   \n",
+       "      Payment_of_Min_Amount Total_EMI_per_month  Amount_invested_monthly  \\\n",
+       "0                        No           49.574949        80.41529543900253   \n",
+       "1                        No           49.574949       118.28022162236736   \n",
+       "2                        No           49.574949          81.699521264648   \n",
+       "3                        No           49.574949        199.4580743910713   \n",
+       "4                        No           49.574949       41.420153086217326   \n",
+       "...                     ...                 ...                      ...   \n",
+       "99995                    No           35.104023        60.97133255718485   \n",
+       "99996                    No           35.104023        54.18595028760385   \n",
+       "99997                    No           35.104023        24.02847744864441   \n",
+       "99998                    No           35.104023       251.67258219721603   \n",
+       "99999                    No           35.104023        167.1638651610451   \n",
        "\n",
-       "      Amount_invested_monthly                 Payment_Behaviour  \\\n",
-       "0           80.41529543900253   High spent Small value payments   \n",
-       "1          118.28022162236736    Low spent Large value payments   \n",
-       "2             81.699521264648   Low spent Medium value payments   \n",
-       "3           199.4580743910713    Low spent Small value payments   \n",
-       "4          41.420153086217326  High spent Medium value payments   \n",
-       "...                       ...                               ...   \n",
-       "99995       60.97133255718485   High spent Large value payments   \n",
-       "99996       54.18595028760385  High spent Medium value payments   \n",
-       "99997       24.02847744864441   High spent Large value payments   \n",
-       "99998      251.67258219721603    Low spent Large value payments   \n",
-       "99999       167.1638651610451                            !@9#%8   \n",
+       "                      Payment_Behaviour     Monthly_Balance  Credit_Score  \n",
+       "0       High spent Small value payments  312.49408867943663          Good  \n",
+       "1        Low spent Large value payments  284.62916249607184          Good  \n",
+       "2       Low spent Medium value payments   331.2098628537912          Good  \n",
+       "3        Low spent Small value payments  223.45130972736786          Good  \n",
+       "4      High spent Medium value payments  341.48923103222177          Good  \n",
+       "...                                 ...                 ...           ...  \n",
+       "99995   High spent Large value payments  479.86622816574095          Poor  \n",
+       "99996  High spent Medium value payments    496.651610435322          Poor  \n",
+       "99997   High spent Large value payments   516.8090832742814          Poor  \n",
+       "99998    Low spent Large value payments   319.1649785257098      Standard  \n",
+       "99999                            !@9#%8   393.6736955618808          Poor  \n",
        "\n",
-       "          Monthly_Balance Credit_Score  \n",
-       "0      312.49408867943663         Good  \n",
-       "1      284.62916249607184         Good  \n",
-       "2       331.2098628537912         Good  \n",
-       "3      223.45130972736786         Good  \n",
-       "4      341.48923103222177         Good  \n",
-       "...                   ...          ...  \n",
-       "99995  479.86622816574095         Poor  \n",
-       "99996    496.651610435322         Poor  \n",
-       "99997   516.8090832742814         Poor  \n",
-       "99998   319.1649785257098     Standard  \n",
-       "99999   393.6736955618808         Poor  \n",
-       "\n",
-       "[100000 rows x 23 columns]"
+       "[100000 rows x 24 columns]"
       ]
      },
      "execution_count": 6,
@@ -540,7 +527,7 @@
     "\"\"\" dont want: id, cust id, month, name, age, social occupation, no. bank accounts, interst rate, invest monthly  \"\"\"\n",
     "#dropping unwanted columns\n",
     "# dropped_df = df.drop(['ID','Customer_ID','Month','Name', 'Age', 'Occupation', 'Num_Bank_Accounts', 'Interest_Rate', 'Amount_invested_monthly'], axis = 1)\n",
-    "dropped_df = df.drop(['ID','Customer_ID','Month','Name', 'Occupation'], axis = 1)\n",
+    "dropped_df = df.drop(['ID','Customer_ID','Month','Name'], axis = 1)\n",
     "#formatting spaces\n",
     "df = dropped_df.replace(\"_\", \" \", regex=True)\n",
     "#fill in blank cells\n",
@@ -557,7 +544,7 @@
     {
      "data": {
       "text/plain": [
-       "(93465, 23)"
+       "(93465, 24)"
       ]
      },
      "execution_count": 7,
