--- a/log_model.ipynb
+++ b/log_model.ipynb
@@ -15,24 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import findspark and initialize. \n",
-    "import findspark\n",
-    "findspark.init()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#import dependecies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "import pyspark\n",
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark import SparkFiles\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -41,17 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a SparkSession\n",
-    "spark = SparkSession.builder.appName(\"log_model\").getOrCreate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +256,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -299,31 +275,36 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 60949 entries, 2 to 93463\n",
-      "Data columns (total 19 columns):\n",
+      "RangeIndex: 93465 entries, 0 to 93464\n",
+      "Data columns (total 24 columns):\n",
       " #   Column                    Non-Null Count  Dtype  \n",
       "---  ------                    --------------  -----  \n",
-      " 0   Age                       60949 non-null  int64  \n",
-      " 1   Annual_Income             60949 non-null  float64\n",
-      " 2   Monthly_Inhand_Salary     60949 non-null  float64\n",
-      " 3   Num_Bank_Accounts         60949 non-null  int64  \n",
-      " 4   Num_Credit_Card           60949 non-null  int64  \n",
-      " 5   Interest_Rate             60949 non-null  int64  \n",
-      " 6   Num_of_Loan               60949 non-null  int64  \n",
-      " 7   Delay_from_due_date       60949 non-null  int64  \n",
-      " 8   Num_of_Delayed_Payment    60949 non-null  float64\n",
-      " 9   Changed_Credit_Limit      60949 non-null  float64\n",
-      " 10  Num_Credit_Inquiries      60949 non-null  float64\n",
-      " 11  Credit_Mix                60949 non-null  int8   \n",
-      " 12  Outstanding_Debt          60949 non-null  float64\n",
-      " 13  Credit_Utilization_Ratio  60949 non-null  float64\n",
-      " 14  Credit_History_Age        60949 non-null  int64  \n",
-      " 15  Total_EMI_per_month       60949 non-null  float64\n",
-      " 16  Amount_invested_monthly   60949 non-null  float64\n",
-      " 17  Monthly_Balance           60949 non-null  float64\n",
-      " 18  Credit_Score              60949 non-null  object \n",
-      "dtypes: float64(10), int64(7), int8(1), object(1)\n",
-      "memory usage: 8.9+ MB\n"
+      " 0   Age                       93465 non-null  int64  \n",
+      " 1   SSN                       0 non-null      float64\n",
+      " 2   Occupation                93465 non-null  object \n",
+      " 3   Annual_Income             93465 non-null  float64\n",
+      " 4   Monthly_Inhand_Salary     79447 non-null  float64\n",
+      " 5   Num_Bank_Accounts         93465 non-null  int64  \n",
+      " 6   Num_Credit_Card           93465 non-null  int64  \n",
+      " 7   Interest_Rate             93465 non-null  int64  \n",
+      " 8   Num_of_Loan               93465 non-null  int64  \n",
+      " 9   Type_of_Loan              82959 non-null  object \n",
+      " 10  Delay_from_due_date       93465 non-null  int64  \n",
+      " 11  Num_of_Delayed_Payment    86910 non-null  float64\n",
+      " 12  Changed_Credit_Limit      91479 non-null  float64\n",
+      " 13  Num_Credit_Inquiries      91642 non-null  float64\n",
+      " 14  Credit_Mix                93465 non-null  object \n",
+      " 15  Outstanding_Debt          93465 non-null  float64\n",
+      " 16  Credit_Utilization_Ratio  93465 non-null  float64\n",
+      " 17  Credit_History_Age        85026 non-null  object \n",
+      " 18  Payment_of_Min_Amount     93465 non-null  object \n",
+      " 19  Total_EMI_per_month       93465 non-null  float64\n",
+      " 20  Amount_invested_monthly   89274 non-null  float64\n",
+      " 21  Payment_Behaviour         93465 non-null  object \n",
+      " 22  Monthly_Balance           92347 non-null  float64\n",
+      " 23  Credit_Score              93465 non-null  object \n",
+      "dtypes: float64(11), int64(6), object(7)\n",
+      "memory usage: 17.1+ MB\n"
      ]
     }
    ],
@@ -340,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +531,7 @@
        "       '2 Years and 1 Months', '4 Years and 3 Months'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +563,7 @@
        "array([' ', 'Good', 'Standard', 'Bad'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +599,7 @@
        "       'Low spent Large value payments'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +639,7 @@
        "array([-500,   23,   28, ..., 8425, 4808, 2263], dtype=int64)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +670,7 @@
        "<Axes: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -711,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +712,7 @@
        "<Axes: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -753,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +799,7 @@
        "<Axes: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -840,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +848,7 @@
        "(-1.0, 100.0)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -895,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -906,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +896,7 @@
        "<Axes: ylabel='Frequency'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -937,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -966,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1008,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1196,7 @@
        "8            18.816215                40.391238       484.591214         Good  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1225,7 @@
        "array(['Good', 'Standard', 'Poor'], dtype=object)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1280,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1290,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1318,7 @@
        "LogisticRegression(random_state=78)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1357,7 @@
        "LogisticRegression(random_state=78)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1390,7 @@
        "       [  47,  619, 1377]], dtype=int64)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1421,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1432,7 @@
    "metadata": {},
    "source": [
     "### Initial Assessment and Fixes\n",
-    "- Accuracy is below goal of ~75%\n",
+    "- Accuracy is below goal of ~75% (72%)\n",
     "- Creating training data with an equal amount of observations for each target may improve results."
    ]
   },
