--- a/log_model.ipynb
+++ b/log_model.ipynb
@@ -1432,8 +1432,9 @@
    "metadata": {},
    "source": [
     "### Initial Assessment and Fixes\n",
-    "- Accuracy is below goal of ~75% (72%)\n",
-    "- Creating training data with an equal amount of observations for each target may improve results."
+    "- Accuracy is below goal of ~75% (72%); it is not as strong at predicting good credit(2), as poor(0) or standard(1) credit\n",
+    "- Creating training data with an equal amount of observations for each target may improve results.\n",
+    "- Maybe try target encoding (mean encoding) or frequency encoding on categorical data."
    ]
   },
   {
